# mock-cce

./: LICENSE  README.md
mock-exchange-rest-server/: CMakeLists.txt  mock-exchange-rest-server.cpp
mock-exchange-wss-server/: CMakeLists.txt  Makefile  build_script.sh  mock-exchange-wss-server.cpp
mock-exchange-wss-server/bitmex-market-data/: bitmex-market-data.txt
mock-exchange-wss-server/kraken-market-data/11-50-historical-data/: AUD_JPY-data.txt  AUD_USD-data.txt  BCH_AUD-data.txt  BCH_BTC-data.txt  BCH_ETH-data.txt  BCH_EUR-data.txt  BCH_GBP-data.txt  BCH_JPY-data.txt  BCH_USD-data.txt  BCH_USDT-data.txt  BTC_AUD-data.txt  BTC_EUR-data.txt  BTC_GBP-data.txt  BTC_JPY-data.txt  BTC_USD-data.txt  BTC_USDT-data.txt  ETH_AUD-data.txt  ETH_BTC-data.txt  ETH_EUR-data.txt  ETH_GBP-data.txt  ETH_JPY-data.txt  ETH_USD-data.txt  ETH_USDT-data.txt  EUR_AUD-data.txt  EUR_GBP-data.txt  EUR_JPY-data.txt  EUR_USD-data.txt  GBP_USD-data.txt  LINK_AUD-data.txt  LINK_BTC-data.txt  LINK_ETH-data.txt  LINK_EUR-data.txt  LINK_GBP-data.txt  LINK_JPY-data.txt  LINK_USD-data.txt  LINK_USDT-data.txt  LTC_AUD-data.txt  LTC_BTC-data.txt  LTC_ETH-data.txt  LTC_EUR-data.txt  (+10 more)
mock-exchange-wss-server/kraken-market-data/16-85-historical-data/: ADA_AUD-data.txt  ADA_BTC-data.txt  ADA_ETH-data.txt  ADA_EUR-data.txt  ADA_GBP-data.txt  ADA_USD-data.txt  ADA_USDT-data.txt  AUD_JPY-data.txt  AUD_USD-data.txt  BCH_AUD-data.txt  BCH_BTC-data.txt  BCH_ETH-data.txt  BCH_EUR-data.txt  BCH_GBP-data.txt  BCH_JPY-data.txt  BCH_USD-data.txt  BCH_USDT-data.txt  BTC_AUD-data.txt  BTC_CAD-data.txt  BTC_EUR-data.txt  BTC_GBP-data.txt  BTC_JPY-data.txt  BTC_USD-data.txt  BTC_USDC-data.txt  BTC_USDT-data.txt  DOT_BTC-data.txt  DOT_ETH-data.txt  DOT_EUR-data.txt  DOT_GBP-data.txt  DOT_JPY-data.txt  DOT_USD-data.txt  DOT_USDT-data.txt  ETH_AUD-data.txt  ETH_BTC-data.txt  ETH_CAD-data.txt  ETH_EUR-data.txt  ETH_GBP-data.txt  ETH_JPY-data.txt  ETH_USD-data.txt  ETH_USDC-data.txt  (+45 more)
mock-exchange-wss-server/kraken-market-data/21-115-historical-data/: ADA_AUD-data.txt  ADA_BTC-data.txt  ADA_ETH-data.txt  ADA_EUR-data.txt  ADA_GBP-data.txt  ADA_USD-data.txt  ADA_USDT-data.txt  ALGO_BTC-data.txt  ALGO_ETH-data.txt  ALGO_EUR-data.txt  ALGO_GBP-data.txt  ALGO_USD-data.txt  ALGO_USDT-data.txt  ATOM_BTC-data.txt  ATOM_ETH-data.txt  ATOM_EUR-data.txt  ATOM_GBP-data.txt  ATOM_USD-data.txt  ATOM_USDT-data.txt  AUD_JPY-data.txt  AUD_USD-data.txt  BCH_AUD-data.txt  BCH_BTC-data.txt  BCH_ETH-data.txt  BCH_EUR-data.txt  BCH_GBP-data.txt  BCH_JPY-data.txt  BCH_USD-data.txt  BCH_USDT-data.txt  BTC_AUD-data.txt  BTC_CAD-data.txt  BTC_CHF-data.txt  BTC_EUR-data.txt  BTC_GBP-data.txt  (+81 more)
(+4 files in other folders)
